fixed alignment issue with projects

--- a/index.html
+++ b/index.html
@@ -1,58 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Yulie's Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Srisakdi:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&family=Srisakdi:wght@400;700&display=swap" rel="stylesheet">
-  </head>
-  <body>
-    <section class="header">
-        <nav class="nav-container">
-            <ul class="name-header">
-                <li style="font-size: 16px;">
-                    <a href="#about">YULIE LEDESMA</a>
-            </ul>
-            <ul class="project-header">
-                <li style="font-size: 16px;">PROJECTS</li>
-                <li style="font-size: 16px;">RESUME</li>
-                <li style="font-size: 16px;">CONTACT</li>
-            </ul>
-        </nav>
-    </section>
-    <!-- Image One -->
-    <section class="image-container">
-    <img class="star-one" src="images/star_1.png" alt="Star One Icon"/>
-    </section>
-    <!-- Title -->
-    <section class="Title">
-        <h1>Aspiring</h1>
-        <h2>User Experience</h2>
-        <h3>Designer</h3>
-    </section>
-     <!-- Image Two -->
-      <section class="second-image-container">
-        <img class="star-two" src="images/star_2.png" alt="Star Two Icon"/>
-      </section>
-      <!-- About Me Section with Headshot -->
-<section class="about-me-container">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Yulie's Portfolio</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Srisakdi:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&family=Srisakdi:wght@400;700&display=swap"
+    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Space+Grotesk:wght@300..700&family=Srisakdi:wght@400;700&display=swap"
+    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+    rel="stylesheet">
+</head>
+
+<body>
+  <section class="header">
+    <nav class="nav-container">
+      <ul class="name-header">
+        <li style="font-size: 16px;">
+          <a href="#about">YULIE LEDESMA</a>
+      </ul>
+      <ul class="project-header">
+        <li style="font-size: 16px;">PROJECTS</li>
+        <li style="font-size: 16px;">RESUME</li>
+        <li style="font-size: 16px;">CONTACT</li>
+      </ul>
+    </nav>
+  </section>
+  <!-- Image One -->
+  <section class="image-container">
+    <img class="star-one" src="images/star_1.png" alt="Star One Icon" />
+  </section>
+  <!-- Title -->
+  <section class="Title">
+    <h1>Aspiring</h1>
+    <h2>User Experience</h2>
+    <h3>Designer</h3>
+  </section>
+  <!-- Image Two -->
+  <section class="second-image-container">
+    <img class="star-two" src="images/star_2.png" alt="Star Two Icon" />
+  </section>
+  <!-- About Me Section with Headshot -->
+  <section class="about-me-container">
     <!-- Headshot -->
     <section class="headshot">
-        <img src="images/headshot 1.png" alt="me" />
+      <img src="images/headshot 1.png" alt="me" />
     </section>
     <!-- About Me Text -->
     <section class="about-me">
+      <div class="about-me-inner">
         <p>Nice to meet you! :]</p>
         <p class="intro-text"> Hello! My name is Yulie. I'm a fourth year psychology student
-             that also has proficiency in web development coding languages. I'm deeply passionate 
-            about UX design and am committed to continuously learning and growing in this evolving field.</p>
+          with a strong proficiency in web development coding languages. I'm deeply passionate
+          about UX design and am committed to continuously learning and growing in this evolving field.</p>
+      </div>
     </section>
-</section>
-  </body>
+  </section>
+  <section class="rectangle">
+    <p>
+      <span>FEATURED PROJECTS</span>
+      <span>FEATURED PROJECTS</span>
+      <span>FEATURED PROJECTS</span>
+      <span>FEATURED PROJECTS</span>
+      <span>FEATURED PROJECTS</span>
+      <span>FEATURED PROJECTS</span>
+    </p>
+  </section>
+  <!-- Add the horizontal line here -->
+  <hr class="line-divider">
+  <!-- Container for the first project -->
+  <section class="first-project">
+    <span class="number">01</span>
+    <span class="text">Motion Picture Association</span>
+    <span class="number-right">/24</span>
+    <!-- Additional text below the Motion Picture Association -->
+    <p class="additional-text">University film club.</p>
+  </section>
+  <!-- Add second horizontal line here -->
+  <hr class="line-divider-two">
+  <!-- Container for second project-->
+  <section class="second-project">
+    <span class="number-two">02</span>
+    <span class="text-two">Titan Radio</span>
+    <span class="number-right-two">/24</span>
+    <!-- Additional text below the Motion Picture Association -->
+    <p class="additional-text-two">University radio station.</p>
+    <!-- Add third horizontal line here -->
+    <hr class="line-divider-three">
+    <!-- Third project -->
+    <section class="third-project">
+      <span class="number-three">03</span>
+      <span class="text-three">Majia</span>
+      <span class="number-right-three">/24</span>
+      <!-- Additional text below the third project -->
+      <p class="additional-text-three">Additional details about the third project go here.</p>
+    </section>
+
+
+    <!-- Line divider below the third project -->
+    <hr class="line-divider-three">
+
+
+</body>
+
 </html>
