alignment issue fix

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <span class="text-three">Majia</span>
       <span class="number-right-three">/24</span>
       <!-- Additional text below the third project -->
-      <p class="additional-text-three">Additional details about the third project go here.</p>
+      <p class="additional-text-three">Companion for solo travelers.</p>
     </section>
 
 
