--- a/index.html
+++ b/index.html
@@ -114,7 +114,20 @@
     <!-- Line divider below the third project -->
     <hr class="line-divider-three">
 
+    <!-- Connect Section -->
+    <section class="connect">
+      <p>Let's Connect!</p>
+    </section>
 
+    <!-- Link Icons -->
+    <section class="links-container">
+      <section class="link-one">
+        <img src="images/gmail.png" alt="gmail-icon" />
+      </section>
+      <section class="link-two">
+        <img src="images/ld.png" alt="ld-icon" />
+      </section>
+    </section>
 </body>
 
 </html>
