added links. ld works but gmail doesnt

--- a/index.html
+++ b/index.html
@@ -121,13 +121,15 @@
 
     <!-- Link Icons -->
     <section class="links-container">
-      <section class="link-one">
+      <a href="mailto:yulieledesmma@gmail.com" class="link-one">
         <img src="images/gmail.png" alt="gmail-icon" />
-      </section>
-      <section class="link-two">
+      </a>      
+      <a href="https://www.linkedin.com/in/yulie-ledesma-bbb689255" class="link-two">
         <img src="images/ld.png" alt="ld-icon" />
-      </section>
+      </a>
     </section>
+
+  </section>
 </body>
 
 </html>
