links open to new page

--- a/index.html
+++ b/index.html
@@ -30,13 +30,12 @@
   <section class="header">
     <nav class="nav-container">
       <ul class="name-header">
-        <li style="font-size: 16px;">
-          <a href="#about">YULIE LEDESMA</a>
+        <li style="font-size: 16px;">YULIE LEDESMA</li>
       </ul>
       <ul class="project-header">
+        <li style="font-size: 16px;">ABOUT</li>
         <li style="font-size: 16px;">PROJECTS</li>
         <li style="font-size: 16px;">RESUME</li>
-        <li style="font-size: 16px;">CONTACT</li>
       </ul>
     </nav>
   </section>
@@ -120,10 +119,10 @@
 
     <!-- Link Icons -->
     <section class="links-container">
-      <a href="mailto:yulieledesmma@gmail.com" class="link-one">
+      <a href="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=yulieledesmma@gmail.com&tf=1" target="_blank">
         <img src="images/gmail.png" alt="gmail-icon" />
-      </a>      
-      <a href="https://www.linkedin.com/in/yulie-ledesma-bbb689255" class="link-two">
+      </a>
+      <a href="https://www.linkedin.com/in/yulie-ledesma-bbb689255" class="link-two" target="_blank">
         <img src="images/ld.png" alt="ld-icon" />
       </a>
     </section>
