fixed design issue w nav

--- a/index.html
+++ b/index.html
@@ -33,8 +33,12 @@
         <li style="font-size: 16px;">YULIE LEDESMA</li>
       </ul>
       <ul class="project-header">
-        <li style="font-size: 16px;">ABOUT</li>
-        <li style="font-size: 16px;">PROJECTS</li>
+        <li style="font-size: 16px;">
+          <a href="#about">ABOUT</a>
+        </li>
+        <li style="font-size: 16px;">
+          <a href="#projects">PROJECTS</a>
+        </li>
         <li style="font-size: 16px;">RESUME</li>
       </ul>
     </nav>
@@ -54,7 +58,7 @@
     <img class="star-two" src="images/star_2.png" alt="Star Two Icon" />
   </section>
   <!-- About Me Section with Headshot -->
-  <section class="about-me-container">
+  <section class="about-me-container" id="about">
     <!-- Headshot -->
     <section class="headshot">
       <img src="images/headshot 1.png" alt="me" />
@@ -69,7 +73,7 @@
       </div>
     </section>
   </section>
-  <section class="rectangle">
+  <section class="rectangle" id="projects">
     <p>
       <span>FEATURED PROJECTS</span>
       <span>FEATURED PROJECTS</span>
