--- a/index.html
+++ b/index.html
@@ -121,15 +121,22 @@
       <p>Let's Connect!</p>
     </section>
 
-    <!-- Link Icons -->
-    <section class="links-container">
-      <a href="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=yulieledesmma@gmail.com&tf=1" target="_blank">
-        <img src="images/gmail.png" alt="gmail-icon" />
-      </a>
-      <a href="https://www.linkedin.com/in/yulie-ledesma-bbb689255" class="link-two" target="_blank">
-        <img src="images/ld.png" alt="ld-icon" />
-      </a>
-    </section>
+      <!-- Link Icons -->
+<section class="links-container">
+  <!-- Gmail Icon -->
+  <div class="gmail-container">
+    <a href="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=yulieledesmma@gmail.com&tf=1" target="_blank">
+      <img src="images/gmail.png" alt="gmail-icon" />
+    </a>
+  </div>
+
+  <!-- LinkedIn Icon -->
+  <div class="linkedin-container">
+    <a href="https://www.linkedin.com/in/yulie-ledesma-bbb689255" target="_blank">
+      <img src="images/ld.png" alt="ld-icon" />
+    </a>
+  </div>
+</section>
 
   </section>
 </body>
