included resume and linked it to nav bar

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
         <li style="font-size: 16px;">
           <a href="#projects">PROJECTS</a>
         </li>
-        <li style="font-size: 16px;">RESUME</li>
+        <li style="font-size: 16px;">
+          <a href="assets/Yulie_Ledesma_Resume.pdf" target="_blank">RESUME</a>
+        </li>
       </ul>
     </nav>
   </section>
