--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
       <span>FEATURED PROJECTS</span>
       <span>FEATURED PROJECTS</span>
       <span>FEATURED PROJECTS</span>
+      <span>FEATURED PROJECTS</span>
     </p>
   </section>
   <!-- Add the horizontal line here -->
