new page fore case study added

--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
   <!-- Container for the first project -->
   <section class="first-project">
     <span class="number">01</span>
+    <a href="mpa.html">
     <span class="text">Motion Picture Association</span>
+    </a>
     <span class="number-right">/24</span>
     <!-- Additional text below the Motion Picture Association -->
     <p class="additional-text">University film club.</p>
@@ -109,7 +111,7 @@
     <!-- Third project -->
     <section class="third-project">
       <span class="number-three">03</span>
-      <span class="text-three">Majia</span>
+        <span class="text-three">Majia</span>
       <span class="number-right-three">/24</span>
       <!-- Additional text below the third project -->
       <p class="additional-text-three">Companion for solo travelers.</p>
@@ -140,8 +142,11 @@
     </a>
   </div>
 </section>
-
   </section>
+ <footer class="footer">
+  <p>© 2025 Yulie Ledesma</p>
+</footer>
+
 </body>
 
 </html>
