working on foot

--- a/mpa.html
+++ b/mpa.html
@@ -51,7 +51,7 @@
 
   <!-- Project Title -->
   <section class="Title">
-    <h1><a href="mpa.html">Motion Picture Association</a></h1>
+    <h1>Motion Picture Association</h1>
 
   </section>
 
